--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 data-final.csv
 .ipynb_checkpoints/
-<<<<<<< HEAD
 .idea
 time_cleaned.csv
-=======
-.idea
->>>>>>> 078c9e7246d1d0fde8a77dda05a901f055ff51d7
+time_cleaned_2.csv
